MINOR-BUGFIX: Fixed z-index issue when main content is sticky.

--- a/client/css/theme-blue.css
+++ b/client/css/theme-blue.css
@@ -8291,7 +8291,9 @@ table {
   .sticky:before,
   .sticky:after {
     content: '';
-    display: table; } }
+    display: table; }
+  .sticky.main-inner {
+    z-index: 1; } }
 
 #main-container {
   border-top: 3px solid #0a416f; }
